--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
    
     <title>Rabany Mail</title>
+    <script src="https://cdn.tiny.cloud/1/ss6ati72yjdyamfhwdcvrcsh8di5pjwz9rj4kr71hsbvccg4/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      tinymce.init({
+        selector: 'textarea',
+        plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
+        toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
+        toolbar_mode: 'floating',
+        tinycomments_mode: 'embedded',
+        tinycomments_author: 'Author name',
+     });
+    </script>
   </body>
 </html>
